finished extra credits, allow keyboard interaction and undo last input

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
         <input class="display" value="0"></input>
         <div class="top-row">
             <button class="top-row-btn clear-btn">AC</button>
-            <button class="top-row-btn empty"></button>
-            <button class="top-row-btn empty"></button>
+            <button class="top-row-btn posNeg">+/-</button>
+            <button class="top-row-btn back">🔙</button>
             <button class="top-row-btn divide-btn">➗</button>
         </div>
         <div class="row">
-            <button class="row-btn">7</button>
-            <button class="row-btn">8</button>
-            <button class="row-btn">9</button>
+            <button class="row-btn seven">7</button>
+            <button class="row-btn eight">8</button>
+            <button class="row-btn nine">9</button>
             <button class="row-btn multiply-btn">✖️</button>
         </div>
         <div class="row">
-            <button class="row-btn">4</button>
-            <button class="row-btn">5</button>
-            <button class="row-btn">6</button>
+            <button class="row-btn four">4</button>
+            <button class="row-btn five">5</button>
+            <button class="row-btn six">6</button>
             <button class="row-btn subtract-btn">➖</button>
         </div>
         <div class="row">
-            <button class="row-btn">1</button>
-            <button class="row-btn">2</button>
-            <button class="row-btn">3</button>
+            <button class="row-btn one">1</button>
+            <button class="row-btn two">2</button>
+            <button class="row-btn three">3</button>
             <button class="row-btn sum-btn">➕</button>
         </div>
         <div class="row">
